--- a/views/others/allcharacters.handlebars
+++ b/views/others/allcharacters.handlebars
@@ -1,1 +1,7 @@
 <h1>This has the list of all characters</h1>
+<h1>this is a list of all users</h1>
+<ul>
+    {{#each characters}}
+    <li><a href="/characters/{{this.id}}">{{this.id}}: {{this.name}}</a></li>
+    {{/each}}
+</ul>
