--- a/views/others/landing.handlebars
+++ b/views/others/landing.handlebars
@@ -1,1 +1,7 @@
 <h1>This is the landing page</h1>
+
+<p>Here is a link to the users profile page</p>
+<a href="/users">User Profiles</a>
+
+<p>Here is a link to the characters profile page</p>
+<a href="/characters">Character Profiles</a>
