--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,9 +7,11 @@
     <body>
 	<h1>{{pageTitle}}</h1>
 	<main>
+        {{#unless landing}}
         <a href="/">Main page</a>
         <a href="/users">User Profiles</a>
         <a href="/characters">Character Profiles</a>
+        {{/unless}}
 	    {{{body}}}
 	</main>
     </body>
