--- a/views/others/allcharacters.handlebars
+++ b/views/others/allcharacters.handlebars
@@ -1,7 +1,6 @@
 <h1>This has the list of all characters</h1>
-<h1>this is a list of all users</h1>
 <ul>
     {{#each characters}}
-    <li><a href="/characters/{{this.id}}">{{this.id}}: {{this.name}}</a></li>
+    <li><a href="/characters/{{this.id}}">{{this.name}}</a></li>
     {{/each}}
 </ul>
