--- a/views/others/user.handlebars
+++ b/views/others/user.handlebars
@@ -1,1 +1,15 @@
 <h1>This is the page for the profile of user with id {{userid}}</h1>
+<h1>{{user.displayName}}</h1>
+<img src={{charImage}}>
+<dt>Total Wins</dt>
+<dd>{{user.wins}}</dd>
+<dt>Total Losses</dt>
+<dd>{{user.losses}}</dd>
+<dt>Rival</dt>
+<dd>{{user.rival}}</dd>
+<a href="/user/characterMatchup/{{user.id}}">
+    <button>Character Stats</button>
+</a>
+<a href="/user/playerMatchup/{{user.id}}">
+    <button>Opponent Stats</button>
+</a>
