--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-	<meta charset="utf-8">
-	<title>{{pageTitle}}</title>
-    </head>
-    <body>
+<head>
+    <meta charset="utf-8">
+    <title>{{pageTitle}}</title>
+</head>
+<body>
 	<h1>{{pageTitle}}</h1>
 	<main>
         {{#unless landing}}
         <a href="/">Main page</a>
-        <a href="/users">User Profiles</a>
         <a href="/characters">Character Profiles</a>
+        <a href="/users">User Lookup</a>
         {{/unless}}
+        {{#if loggedIn}}
+        <p>{{greeting}}</p>
+        {{else}}
+        <a href="/login">Log In</a>
+        {{/if}}
 	    {{{body}}}
 	</main>
-    </body>
+</body>
 </html>
