--- a/views/others/user.handlebars
+++ b/views/others/user.handlebars
@@ -6,7 +6,7 @@
 <dt>Total Losses</dt>
 <dd>{{user.losses}}</dd>
 <dt>Rival</dt>
-<dd>{{user.rival}}</dd>
+<dd>{{user.rival.name}} ({{user.rival.wins}}/{{user.rival.losses}}</dd>
 <a href="/user/characterMatchup/{{user.id}}">
     <button>Character Stats</button>
 </a>
