--- a/views/others/allcharacters.handlebars
+++ b/views/others/allcharacters.handlebars
@@ -5,8 +5,7 @@
     <th class="sortButton">Name</th>
     {{#each characters}}
         <tr class="characterRow">
-            <td class="ID">{{this.id}}</td>
-            <td class="Name"><a href="/characters/{{this.name}}">{{this.name}}</a></td>
+            <td class="Name"><a href="/characters/{{this.abrvName}}">{{this.displayName}}</a></td>
         </tr>
-    {{/each}}   
+    {{/each}}
 </table>
