Made tablesort more efficient

--- a/views/others/user.handlebars
+++ b/views/others/user.handlebars
@@ -13,7 +13,7 @@
 </div>
 <div id="character" class ="tabcontent">
     <h1>Winrates by Character</h1>
-    <table>
+    <table class="character">
         <th class="sortButton">Character</th>
         <th class="sortButtonNumeric">Wins</th>
         <th class="sortButtonNumeric">Losses</th>
@@ -30,7 +30,7 @@
 </div>
 <div id="opponent" class ="tabcontent" hidden>
     <h1>Winrates by Opponent</h1>
-    <table>
+    <table class="opponent">
         <th class="sortButton">Opponent</th>
         <th class="sortButtonNumeric">Wins</th>
         <th class="sortButtonNumeric">Losses</th>
