--- a/views/others/character.handlebars
+++ b/views/others/character.handlebars
@@ -1,7 +1,7 @@
 <h1>This is the page with the statistics for character with id {{characterid}}</h1>
 <br>
 <h1>{{character.displayName}}</h1>
-<img src={{character.image}}>
+<img src="/public/images/{{character.abrvName}}.png">
 <div class="tab">
     <button class="tablinks" onclick="openPage(event, 'stat')">Statistics</button> {{!might neeed to change this later}}
     <button class="tablinks" onclick="openPage(event, 'match')">Matches</button>
