Added matches handlebar and let table searching work for tables with multiple columns

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,7 @@
         <a href="/">Main page</a>
         <a href="/characters">Character Profiles</a>
         <a href="/users">User Lookup</a>
+        <a href="/matches">All Matches</a>
         {{/unless}}
         {{#if loggedIn}}
         <p>{{greeting}}</p>
