--- a/views/others/landing.handlebars
+++ b/views/others/landing.handlebars
@@ -5,3 +5,6 @@
 
 <p>Here is a link to the characters profile page</p>
 <a href="/characters">Character Profiles</a>
+
+<p>Here is a link to the list of all matches</p>
+<a href="/matches">All Matches</a>
