--- a/views/others/landing.handlebars
+++ b/views/others/landing.handlebars
@@ -8,3 +8,6 @@
 
 <p>Here is a link to the list of all matches</p>
 <a href="/matches">All Matches</a>
+
+<p>Here is a link to login</p>
+<a href="/login">Login</a>
