--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,24 @@
 html {
     background-color: lightgrey;
 }
+
+#matchTable {
+    border-collapse: collapse;
+}
+
+#matchTable tr:nth-child(even){background-color: #f2f2f2;}
+
+#matchTable tr:hover {background-color: #ddd;}
+
+#matchTable th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    background-color: lightcoral;
+    color: white;
+}
+
+#characterList td {
+    font-size: 29px;
+}
+
+#c
