--- a/views/others/allusers.handlebars
+++ b/views/others/allusers.handlebars
@@ -6,7 +6,7 @@
     <button class="search">Search</button>
 </form>
 <button class="clearResults" hidden="true">Clear Results</button>
-<table>
+<table id="userList">
     <tr class="header">
         <th class="sortButton">Name</th>
     </tr>
