Excluded comments from match searching

--- a/views/others/allmatches.handlebars
+++ b/views/others/allmatches.handlebars
@@ -22,7 +22,7 @@
             <a href="../users/{{this.loser}}">{{this.loser}}</a>
             (<a href="../characters/{{this.loserPlayed}}">{{this.loserPlayedDisplay}}</a>)
         </td>
-        <td class="link"><a href="../matches/{{this._id}}">link</a></td>
+        <td class="link excludeFromSearch",><a href="../matches/{{this._id}}">link</a></td>
         {{!Add a tournamentplayed field}}
     </tr>    
     {{/each}}
