Made match table properly sort

--- a/views/others/allmatches.handlebars
+++ b/views/others/allmatches.handlebars
@@ -14,11 +14,11 @@
     </tr>
     {{#each matches}}
     <tr class="match">
-        <td class="winner">
+        <td class="Winner">
             <a href="../users/{{this.winner}}">{{this.winner}}</a>
             (<a href="../characters/{{this.winnerPlayed}}">{{this.winnerPlayedDisplay}}</a>)
         </td>
-        <td class="loser">
+        <td class="Loser">
             <a href="../users/{{this.loser}}">{{this.loser}}</a>
             (<a href="../characters/{{this.loserPlayed}}">{{this.loserPlayedDisplay}}</a>)
         </td>
