--- a/views/others/user.handlebars
+++ b/views/others/user.handlebars
@@ -1,5 +1,5 @@
 <script src="/public/js/tablesorts.js"></script>
-<img src="../../public/images/{{mostPlayed}}.png">
+<img src="../../public/images/{{mostPlayed}}.png" alt="{{mostPlayed}}">
 <dt>Total Wins</dt>
 <dd>{{wins}}</dd>
 <dt>Total Losses</dt>
