--- a/views/others/allcharacters.handlebars
+++ b/views/others/allcharacters.handlebars
@@ -12,7 +12,7 @@
     </tr>
     {{#each characters}}
         <tr class="row">
-            <td class="Name"><img src="../../public/imageheads/{{this.abrvName}}.png"><a href="/characters/{{this.abrvName}}">{{this.displayName}}</a></td>
+            <td class="Name"><img class='head' src="../../public/imageheads/{{this.abrvName}}.png"><a href="/characters/{{this.abrvName}}">{{this.displayName}}</a></td>
         </tr>
     {{/each}}
 </table>
