Added tournament lookup handlebar

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,6 +14,7 @@
         <a href="/">Main page</a>
         <a href="/characters">Character Profiles</a>
         <a href="/users">User Lookup</a>
+        <a href="/tournaments">Tournament Lookup</a>
         <a href="/matches">All Matches</a>
         {{#if loggedIn}}
         <p>{{greeting}}</p>
