--- a/views/others/landing.handlebars
+++ b/views/others/landing.handlebars
@@ -6,6 +6,8 @@
 <p>Here is a link to the characters profile page</p>
 <a href="/characters">Character Profiles</a>
 
+<p>Here is a link to a list of all tournaments</p>
+<a href="/tournaments">Tournament Profiles</a>
 <p>Here is a link to the list of all matches</p>
 <a href="/matches">All Matches</a>
 
