--- a/views/others/allusers.handlebars
+++ b/views/others/allusers.handlebars
@@ -5,7 +5,7 @@
     <input type="text" name ="search_term" id="search_term">
     <button class="search">Search</button>
 </form>
-<button class="clearResults" hidden="true">Clear Results</button>
+<button class="clearResults" hidden>Clear Results</button>
 <table id="userList">
     <tr class="header">
         <th class="sortButton">Name</th>
@@ -16,4 +16,4 @@
         </tr>
     {{/each}}
 </table>
-<label class="noResult" hidden="true">There are no results, please try again with a different query</label>
+<label class="noResult" hidden>There are no results, please try again with a different query</label>
