--- a/views/others/user.handlebars
+++ b/views/others/user.handlebars
@@ -1,11 +1,13 @@
 <script src="/public/js/tablesorts.js"></script>
 <img src="../../public/images/{{mostPlayed}}.png" alt="{{mostPlayed}}">
-<dt>Total Wins</dt>
-<dd>{{wins}}</dd>
-<dt>Total Losses</dt>
-<dd>{{losses}}</dd>
-<dt>Rival</dt>
-<dd>Users rival is {{rival.displayName}}, they have beat them {{rival.wins}} times and lost to them {{rival.losses}} times</dd>
+<dl>
+    <dt>Total Wins</dt>
+    <dd>{{wins}}</dd>
+    <dt>Total Losses</dt>
+    <dd>{{losses}}</dd>
+    <dt>Rival</dt>
+    <dd>Users rival is {{rival.displayName}}, they have beat them {{rival.wins}} times and lost to them {{rival.losses}} times</dd>
+</dl>
 <div class="tab">
     <button class="tablinks" onclick="openPage(event, 'character')">Winrates by Character</button> {{!might neeed to change this later}}
     <button class="tablinks" onclick="openPage(event, 'opponent')">Winrates by Opponent</button>
@@ -13,13 +15,15 @@
 <div id="character" class ="tabcontent">
     <h1>Winrates by Character</h1>
     <table class="character">
-        <th class="sortButton">Character</th>
-        <th class="sortButtonNumeric">Wins</th>
-        <th class="sortButtonNumeric">Losses</th>
-        <th class="sortButtonNumeric">Winrate</th>
+        <tr>
+            <th class="sortButton">Character</th>
+            <th class="sortButtonNumeric">Wins</th>
+            <th class="sortButtonNumeric">Losses</th>
+            <th class="sortButtonNumeric">Winrate</th>
+        </tr>
         {{#each user.charPlayed}}
         <tr>
-            <td class="Character"><img src="../../public/imageheads/{{@key}}.png"><a href="../characters/{{@key}}">{{this.[3]}}</a></td>
+            <td class="Character"><img src="../../public/imageheads/{{@key}}.png" alt="{{@key}}"><a href="../characters/{{@key}}">{{this.[3]}}</a></td>
             <td class="Wins">{{this.[0]}}</td>
             <td class="Losses">{{this.[1]}}</td>
             <td class="Winrate">{{this.[2]}}%</td>
@@ -30,10 +34,12 @@
 <div id="opponent" class ="tabcontent" hidden>
     <h1>Winrates by Opponent</h1>
     <table class="opponent">
-        <th class="sortButton">Opponent</th>
-        <th class="sortButtonNumeric">Wins</th>
-        <th class="sortButtonNumeric">Losses</th>
-        <th class="sortButtonNumeric">Winrate</th>
+        <tr>
+            <th class="sortButton">Opponent</th>
+            <th class="sortButtonNumeric">Wins</th>
+            <th class="sortButtonNumeric">Losses</th>
+            <th class="sortButtonNumeric">Winrate</th>
+        </tr>
         {{#each user.userPlayed}}
         <tr>
             <td class="Opponent"><a href="./{{@key}}">{{@key}}</a></td>
