introduced basic tournament seeding

--- a/views/others/alltournaments.handlebars
+++ b/views/others/alltournaments.handlebars
@@ -10,7 +10,7 @@
     <tr class="header">
         <th class="sortButton">Name</th>
     </tr>
-    {{#each matches}}
+    {{#each tournaments}}
     <tr class="tournament">
         <td class="Name">
             <a href="../tournaments/{{this._id}}">{{this.name}}</a>
