--- a/views/others/match.handlebars
+++ b/views/others/match.handlebars
@@ -18,3 +18,9 @@
     <input type="text" name ="comment" id="comment">
     <button class="submit">Submit</button>
 </form>
+<dl class="matchComments">
+{{#each match.comments}}
+    <dt>{{this.username}}</dt>
+    <dd>{{this.content}}</dd>
+{{/each}}
+</dl>
