--- a/views/others/allmatches.handlebars
+++ b/views/others/allmatches.handlebars
@@ -25,7 +25,7 @@
         <th class="sortButton">Winner</th>
         <th class="sortButton">Loser</th>
         <th class="sortButton">Tournament</th>
-        <th>comments</th>
+        <th>Match Link</th>
     </tr>
     {{#each matches}}
     <tr class="match">
@@ -43,7 +43,6 @@
             {{else}}
             <p>N/A</p>
             {{/if}}
-        </td
         </td>
         <td class="link excludeFromSearch"><a href="../matches/{{this._id}}">link</a></td>
         {{!Add a tournamentplayed field}}
